plugins {
	id 'net.fabricmc.fabric-loom' version "${loom_version}"
	id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

base {
	archivesName = project.archives_base_name
}

repositories {
	// Add repositories to retrieve artifacts from in here.
	// You should only use this when depending on other mods because
	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
	// for more information about repositories.
}

dependencies {
	// To change the versions see the gradle.properties file
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	implementation "net.fabricmc:fabric-loader:${project.loader_version}"

	// Fabric API. This is technically optional, but you probably want it anyway.
	implementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
	
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": inputs.properties.version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 25
}

java {
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
	// if it is present.
	// If you remove this line, sources will not be generated.
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_25
	targetCompatibility = JavaVersion.VERSION_25
}

import org.gradle.internal.logging.text.StyledTextOutputFactory;
import static org.gradle.internal.logging.text.StyledTextOutput.Style;

jar {
	inputs.property "archivesName", project.base.archivesName
	version = null

	from("LICENSE") {
		rename { "${it}_${inputs.properties.archivesName}"}
	}

	// Human readable list of compiled native libraries that were found
	def natives = []

	// Host-specific native library
	def nativeFile = file("native/target/debug/libwaylandcraft.so")
	if(nativeFile.exists()) {
		from(nativeFile)
		natives.add("host")
	}

	// Packaging of libraries in directory `native-libs`
	// Used by the actions runner for releases
	def targets = [
		"linux-gnu-x86_64",
		"linux-gnu-arm64"
	];

	for(def target in targets) {
		def f = file("native-libs/libwaylandcraft-${target}.so")
		if(!f.exists()) continue;

		with(copySpec {
			from(f)
		})
		natives.add("${target}")
	}

	if(natives.size() < 1) {
		services
			.get(StyledTextOutputFactory)
			.create("waylandcraft")
			.withStyle(Style.Failure)
			.println("WARNING: Native library not built! The built mod will not contain native code");
	}
}

loom {
	runs {
		client {
			environmentVariable("LD_LIBRARY_PATH", "../native/target/debug/")
			environmentVariable("__GL_THREADED_OPTIMIZATIONS", "0")
			environmentVariable("RUST_BACKTRACE", "1")
		}
	}
}

// configure the maven publication
publishing {
	publications {
		create("mavenJava", MavenPublication) {
			artifactId = project.archives_base_name
			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		// Add repositories to publish to here.
		// Notice: This block does NOT have the same function as the block in the top level.
		// The repositories here will be used for publishing your artifact, not for
		// retrieving dependencies.
	}
}
